Add Profile Deletion

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -235,10 +235,6 @@
     "This will delete your location AND all your distance settings":"Cette action supprimera la position ET tous les paramètres de distance",
     "Switch Profile":"Changer de Profil",
     "Create New Profile":"Créer un Nouveau Profil",
-    "You currently don't have any profile configured":"Vous n'avez pas encore configuré de Profil",
-    "Default Profile is being used":"Le Profil par défault est utilisé",
-    "By clcking 'Create New Profile' below you will assign a name to this default Profile":"Cliquez sur 'Créer un Nouveau Profil' pour assigner un nom au profil par défaut",
-    "You will then have the option to create additional Profiles":"Vous aurez ensuite la possibilité de créer des profils additionnels",
     "Active Profile is shown in green below":"Le Profil actif est en vert ci-dessous",
     "Choose Profile to view or activate":"Choisissez un Profil à visualiser ou à activer",
     "Successfully Updated Active Profile":"Le Profil actif a été modifié",
@@ -250,6 +246,7 @@
     "Please Name default Profile":"Veuillez donner un nom au profil par défault",
     "Validate":"Valider",
     "Active":"Actif",
+    "Not Active":"Non Actif",
     "Default Profile":"Profil par Défaut",
     "Rename Profile":"Renommer un Profil",
     "Choose a New Profile Name":"Choisissez un nouveau Nom pour ce Profil",
@@ -280,7 +277,15 @@
     "Successfully Updated Lure Alarm":"La liste de Leures à été mise à jour",
     "Successfully Deleted Lure Alarm(s)":"Alarme de Leure supprimée avec succès",
     "Successfully Updated Distance on ALL Lures":"Distance Mise à Jour avec Succès pour TOUS les Leures",
+    "Successfully Created Profile":"Profil créé avec succès",
+    "Successfully Renamed Profile":"Profil Renommé avec succès",
+    "Successfully Deleted Profile":"Profil Supprimé avec succès",
     "Delete ALL Lures?":"Supprimer TOUS les Leures suivis",
     "NEW LURES ALARM":"NOUVELLE ALARME DE LEURE",
-    "ALL LURES":"TOUS LES LEURES"
+    "ALL LURES":"TOUS LES LEURES",
+    "Profile":"Profil",
+    "Default":"Défaut",
+    "Delete Profile":"Supprimer le Profil",
+    "This will delete this Profile":"Cette action supprimera le profil en cours",
+    "AND ALL ASSOCIATED TRACKINGS":"ET TOUS LES SUIVIS ASSOCIES"
 }
