Updated danish translations
Updated danish translations and fixed a few typos

--- a/locales/da.json
+++ b/locales/da.json
@@ -5,8 +5,8 @@
 	"ALL Quests": "ALLE Missioner",
 	"ALL Raids/Eggs": "ALLE Raids / Æg",
 	"CANCEL": "Annullere",
-	"Cleaning Activated": "Rydning aktiveret",
-	"Cleaning activated on": "Rydning aktiveret på",
+	"Cleaning Activated": "Oprydning aktiveret",
+	"Cleaning activated on": "Oprydning aktiveret på",
 	"command": "kommando",
 	"CP": "CP",
 	"DELETE": "SLET",
@@ -24,7 +24,7 @@
 	"POKÉMONS TRACKED": "SPOREDE POKÉMON",
 	"EGGS & RAIDS TRACKED": "SPOREDE ÆG & RAIDS",
 	"QUESTS TRACKED": "SPOREDE MISSIONER",
-	"QUESTS": "QUESTS",
+	"QUESTS": "MISSIONER",
 	"RAIDS": "RAIDS",
 	"Raids": "Raids",
 	"Raids Level": "Raid Niveau",
@@ -58,10 +58,11 @@
 	"PvP Ultra": "PvP Ultra",
 	"MIN Rank": "MIN Rank",
 	"MAX Rank": "MAX Rank",
-	"AREAS": "OMRÅDE",
+	"AREAS": "OMRÅDER",
+	"Areas":"Områder",
 	"Your alarms are currently disabled!": "Dine alarmer er deaktiverede!",
 	"You Request couldn't not be handled": "Din forespørgsel kunne ikke behandles",
-	"Your location is not set. Distance settings won't be taken into account.": "Din afstand er ikke sat. Afstands instillinger bliver ikke behandlet",
+	"Your location is not set. Distance settings won't be taken into account.":"Din placering er ikke sat. Afstands instillinger bliver ikke taget i brug",
 	"Distance": "Afstand",
 	"Form": "Form",
 	"Gender": "Køn",
@@ -69,14 +70,14 @@
 	"All": "All",
 	"Male": "Mand",
 	"Female": "Kvinde",
-	"Clean": "Rydde",
+	"Clean": "Oprydning",
 	"Yes": "Ja",
 	"No": "Nej",
 	"Apply to all Pokémons": "Anvend på alle Pokémons",
 	"NEW MONSTER ALARM": "NY MONSTERALARM",
-	"Type": "Skriv",
+	"Type": "Slags",
 	"to display all Pokémons": "for at vise alle Pokémons",
-	"Search": "Sæg",
+	"Search": "Søg",
 	"Cancel": "Annullere",
 	"Submit": "Gem",
 	"NEW RAID ALARM": "NY RAIDALARM",
@@ -86,6 +87,7 @@
 	"Select the Raid Bosses you want to add": "Vælg hvilke Raids du vil tilføje",
 	"NEW QUEST ALARM": "NY MISSIONS ALARM",
 	"Select Pokémon Quests you want to add (Pokémons Currently available on Map)": "Vælg hvilke Pokémon Missioner du vil tilføje (Pokémons som som findes på kortet lige nu)",
+	"Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Vælg hvilke Pokémon Missioner du vil tilføje (Pokémons som som findes på kortet lige nu)",
 	"Pokemons Currently available on Map": "Pokémons som som findes på kortet lige nu",
 	"Or use search below to add another pokemon": "Eller brug søgningen herunder for at tilføje en anden Pokémon",
 	"Select Quests Items you want to add": "Vælg hvilke Missions belønninger du til tilføje",
@@ -93,13 +95,13 @@
 	"Update": "Opdaterer",
 	"Close": "Luk",
 	"Other": "Andre",
-	"Buy or Renew a Subscription": "Køb eller forny medlemskabet",
-	"It looks like you do not have a valid subscription to this tool yet": "Det ser ikke ud til at du har et gyldigt medlemskab til dette værktøj endnu",
-	"It looks like your subscription has expired on": "Det ser ud til at dit medlemskab er udløbet den",
-	"Your subscription is still valid until": "Dit medlemskab stadig er gyldig t.o.m.",
+	"Buy or Renew a Subscription": "Køb eller forny abonnement",
+	"It looks like you do not have a valid subscription to this tool yet": "Det ser ikke ud til at du har et gyldigt abonnement til dette værktøj endnu",
+	"It looks like your subscription has expired on": "Det ser ud til at dit abonnement er udløbet den",
+	"Your subscription is still valid until": "Dit abonnement stadig er gyldig t.o.m.",
 	"Back to": "Tilbage til",
 	"Renew": "Forny",
-	"Subscription valid until": "Dit medlemskab er gyldig t.o.m.",
+	"Subscription valid until": "Dit abonnement er gyldig t.o.m.",
 	"Alerts": "Advarsler",
 	"ALL Monsters Cleaning": "Oprydning af ALLE Monster",
 	"ALL Raid/Egg Cleaning": "Oprydning af ALLE Raid / Æg alarmer",
@@ -112,7 +114,7 @@
 	"Please Register in Discord using": "Registrer dig i Discord med",
 	"before using this tool": "før du bruger dette værktøj",
 	"Do you really want to Leave?": "Er du sikker på at du vil forlade?",
-	"Click 'Logout' below if you are ready to end your current session": "Tryk på 'Log Af' hvis du er sikker på at du vil forlade din nuværende session",
+	"Click 'Logout' below if you are ready to end your current session":"Tryk på 'Log Af' hvis du er sikker på at du vil slutte din nuværende session",
 	"Logout": "Log ud",
 	"Settings": "Indstillinger",
 	"NOT REGISTERED": "IKKE REGISTRERED",
@@ -152,12 +154,12 @@
 	"This will update Distance settings for ALL tracked Raids & Eggs": "Dette vil opdatere afstands instillingen for ALLE sporede Raids og Æg",
 	"Update Distance for all tracked Quests?": "Skal afstanden opdateres for alle sporede Missioner?",
 	"This will update Distance settings for ALL tracked Quests": "Dette vil opdatere afstands instillinger for ALLE sporede Missioner",
-	"Successfully Updated Distance on ALL Pokémons": "Afstand er opdateret for ALLE Pokémons",
-	"Successfully Updated Distance on ALL Raids & Eggs": "Afstand er opdateret for ALLE  Raids & Æg",
-	"Successfully Updated Distance on ALL Quests": "Afstand er opdateret for ALLE Missioner",
+	"Successfully Update Distance on ALL Pokémons": "Afstand er opdateret for ALLE Pokémons",
+	"Successfully Update Distance on ALL Raids & Eggs": "Afstand er opdateret for ALLE  Raids & Æg",
+	"Successfully Update Distance on ALL Quests": "Afstand er opdateret for ALLE Missioner",
 	"UPDATE": "OPDATERE",
 	"UPDATE DISTANCE": "OPDATERE AFSTAND",
-	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har ikke sat nogle alarmer for ALLE Pokémons. Vælk venligst en Generation!",
+	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har ikke sat nogle alarmer for ALLE Pokémons. Vælg venligst en Generation!",
 	"You have not set any Alarms for this Generation!": "Du har ikke at nogle alarmer for denne generation!",
 	"User & Channel Management":"Bruger og kanal håndtering",
 	"Back to own Account":"Tilbage til egen konto",
@@ -185,14 +187,14 @@
 	"TELEGRAM CHANNELS TO SYNC WITH":"Telegram kanal til at synkronisere med",
 	"TELEGRAM DISCORD TO SYNC WITH":"Telegram Discord til at synkronisere med",
 	"CONFIRM CHANNEL SYNCHRONIZATION":"BEKRÆFT KANAL  SYNKRONISERING",
-	"Synchronize Other Channels with this one":"Synkronicere andre kanaler med denne",
+	"Synchronize Other Channels with this one":"Synkronisere andre kanaler med denne",
 	"Select Energy Rewards you want to add":"Vælg energi belønninger du vil tilføje",
 	"Mega Energy":"Mega Energy",
 	"Delete Quests tracking for this Mega Energy":"Slet Missions sporing for denne Mega Energi",
 	"Delete Quests tracking for this item":"Slet Missions sporing for denne ting",
 	"This will delete tracking for invasion type":"Dette vil slette sporing for Invasions typen",
 	"Delete tracking for Invasions":"Slet sporing af Invasioner",
-	"Delete ALL Invasions?":"Slet ALLE Invastioner?",
+	"Delete ALL Invasions?":"Slet ALLE Invasioner?",
 	"This will delete all your Invasions Alarms and cannot be undone":"Dette vil slette alle dine Invasions alarmer og kan ikke fortrydes",
 	"Update Distance for all tracked Invasions?":"Opdatere afstanden for alle sporede Invasioner?",
 	"This will update Distance settings for ALL tracked Invasions":"Dette vil opdatere afstands indstillingen for ALLE sporede Invasioner",
@@ -221,6 +223,18 @@
 	"dragon":"dragon",
 	"everything":"alt",
 	"Configured Distance:":"Indstil Afstand:",
-	"Distance Display":"Vis mfstand",
-	"meters around your position":"meter omkring om din position"
+	"Distance Display":"Vis afstand",
+	"meters around your position":"meter omkring om din position",
+	"Use Areas":"Brug områder",
+	"Set Distance":"Brug afstand",
+	"All your distance settings have been reset":"Alle dine afstands indstillinger af nustillet",
+	"Alarms will only be triggered if ALL Filters are met":"Alarmer vil kun blive aktiveret hvis ALLE filtre bliver ramt",
+	"Delete Location and Distance Settings":"Slet placerings og afstands indstillinger",
+	"Delete":"Slet",
+	"Location deleted successfully":"Placering slettet",
+	"Some of your alarms contains both IV and PvP Filters":"Nogle af dine alarmer har både IV og PVP filter",
+	"Some of your alarms contains both PvP Great and PvP Ultra Filters":"Nogle af dine alarmer har både PvP Great og PvP Ultra filter",
+	"This will delete your location AND all your distance settings":"Dette vil slette din placering og alle dine afstands indstillinger",
+	"You have not set any Alarm yet!":"Du har ingen alarmer sat endnu!",
+	"Your Location is not set yet!":"Din placering er ikke indstillet endnu!"
 }
