new german translations

--- a/locales/de.json
+++ b/locales/de.json
@@ -152,9 +152,9 @@
    "This will update Distance settings for ALL tracked Raids & Eggs":"Dadurch wird die Distanz für ALLE getrackten Raids & Eier aktualisiert",
    "Update Distance for all tracked Quests?":"Möchstest du die Distanz für alle getrackten Quests aktualisieren?",
    "This will update Distance settings for ALL tracked Quests":"Dadurch wird die Distanz für ALLE getrackten Quests aktualisiert",
-   "Successfully Updated Distance on ALL Pokémons":"Distanzeinstellungen wurden erfolgreich für alle Pokémon gespeichert",
-   "Successfully Updated Distance on ALL Raids & Eggs":"Distanzeinstellungen wurden erfolgreich für alle Raids & Eier gespeichert",
-   "Successfully Updated Distance on ALL Quests":"Distanzeinstellungen wurden erfolgreich für alle Quests gespeichert",
+   "Successfully Updated Distance on ALL Pokémons":"Distanzeinstellungen für alle Pokémon gespeichert",
+   "Successfully Updated Distance on ALL Raids & Eggs":"Distanzeinstellungen für alle Raids & Eier gespeichert",
+   "Successfully Updated Distance on ALL Quests":"Distanzeinstellungen für alle Quests gespeichert",
    "UPDATE":"AKTUALISIEREN",
    "UPDATE DISTANCE":"DISTANZ AKTUALISIEREN",
    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Du hast noch keine Benachrichtung für ALLE Pokémon erstellt, bitte wähle eine Generation!",
@@ -193,8 +193,8 @@
    "This will delete tracking for invasion type":"Dadurch wird das Tracking für den Invasionstyp gelöscht",
    "Delete tracking for Invasions":"Lösche das Tracking für Invasion",
    "Delete ALL Invasions?":"Möchtest du ALLE Invasionen löschen?",
-   "This will delete all your Invasions Alarms and cannot be undone":"Dadurch werden alle Invastionsalarme gelöscht und kann nicht rückgängig gemacht werden",
-   "Update Distance for all tracked Invasions?":"Möchstest du die Distanz für alle getrackteten Invasionen aktualisieren?",
+   "This will delete all your Invasions Alarms and cannot be undone":"Bist du dir sicher, dass du alle eingestellten Invasionen unwiderruflich löschen möchtest?",
+   "Update Distance for all tracked Invasions?":"Möchstest du die Distanz für alle getrackten Invasionen aktualisieren?",
    "This will update Distance settings for ALL tracked Invasions":"Dadurch werden alle Distanzeinstellungen für Invasionen aktualisiert",
    "ALL Invasions Cleaning":"Invasionen nach Ablauf bereinigen",
    "NEW INVASIONS ALARM":"NEUE INVASION-EINSTELLUNG",
@@ -224,5 +224,71 @@
    "Distance Display":"Distanzvisualisierung",
    "meters around your position":"Meter um deine Position",
    "Areas":"Gebiete",
-   "INVASIONS":"INVASIONEN"
+   "INVASIONS":"INVASIONEN",
+   "Use Areas":"Gebiete benutzen",
+   "Set Distance":"Distanz setzen",
+   "Some of your alarms contains both IV and PvP Filters":"Manche deiner Einstellungen beinhalten IV und PVP Filter",
+   "Some of your alarms contains both PvP Great and PvP Ultra Filters":"Manche deiner Einstellungen beinhalten Super- und Hyperliga PVP Filter",
+   "Alarms will only be triggered if ALL Filters are met":"Nachrichten werden nur geschickt, wenn ALLE Filter erfüllt sind",
+   "Delete":"Löschen",
+   "Location deleted successfully":"Standort erfolgreich gelöscht",
+   "All your distance settings have been reset":"Alle deine Distanzeinstellungen wurden zurückgesetzt",
+   "Delete Location and Distance Settings":"Standort- und Distanzeinstellungen löschen",
+   "This will delete your location AND all your distance settings":"Dies wird deine Standort- UND Distanzeinstellungen löschen",
+   "Switch Profile":"Profil wechseln",
+   "Create New Profile":"Neues Profil erstellen",
+   "Active Profile is shown in green below":"Dein aktives Profil ist in grün markiert",
+   "Choose Profile to view or activate":"Wähle ein Profil, um es anzusehen oder zu wechseln",
+   "Successfully Updated Active Profile":"Aktives profil wurde erfolgreich aktualisiert",
+   "Successfully Switched Profile View":"Erfolgreich Profilansicht gewechselt",
+   "View":"Ansehen",
+   "Activate":"Aktivieren",
+   "Create Profile":"Profil erstellen",
+   "Choose the name of your new Profile":"Wähle den Namen für dein neues Profil",
+   "Please Name default Profile":"Bit benenne dein Standardprofil",
+   "Validate":"Bestätigen",
+   "Active":"Aktiv",
+   "Not Active":"Nicht aktiv",
+   "Default Profile":"Standardprofil",
+   "Rename Profile":"Profil umbenennen",
+   "Choose a New Profile Name":"Wähle einen neuen Profilnamen",
+   "Lures":"Lockmodule",
+   "LURES":"LOCKMODULE",
+   "Normal Lure":"Normal",
+   "Glacial Lure":"Gletscher",
+   "Mossy Lure":"Moos",
+   "Magnetic Lure":"Magnet",
+   "Delete tracking for Lures":"Lösche Einstellungen für Lockmodule",
+   "This will delete tracking for Lure":"Dies wird die Einstellung löschen für Modul",
+   "Update Distance for all tracked Lures?":"Möchstest du die Distanz für alle getrackten Lockmodule aktualisieren?",
+   "This will update Distance settings for ALL tracked Lures":"Dadurch werden alle Distanzeinstellungen für ALLE Lockmodule aktualisiert",
+   "Delete ALL tracked Lures?":"ALLE Lockmoduleinstellungen löschen?",
+   "This will delete all your Lures Alarms and cannot be undone":"Bist du dir sicher, dass du alle eingestellten Lockmodule unwiderruflich löschen möchtest?",
+   "ACTIVATE CLEANING ON ALL":"Bereinige alle",
+   "Monsters":"Pokémon",
+   "Raid/Egg":"Raids/Eier",
+   "Quests":"Quests",
+   "Invasions":"Invasionen",
+   "Lures":"Lockmodule",
+   "LURES TRACKED":"LOCKMODUL-EINSTELLUNGEN",
+   "Successfully Added Invasion Alarm(s)":"Invasions-Einstellung erfolgreich hinzugefügt",
+   "Successfully Updated Invasion Alarm":"Invasions-Einstellung erfolgreich aktualisiert",
+   "Successfully Deleted Invasion Alarm(s)":"Invasions-Einstellung erfolgreich gelöscht",
+   "Successfully Updated Distance on ALL Invasions":"Distanzeinstellungen für alle Invasionen gespeichert",
+   "Successfully Added Lure Alarm(s)":"Lockmodul-Einstellung erfolgreich hinzugefügt",
+   "Successfully Updated Lure Alarm":"Lockmodul-Einstellung erfolgreich aktualisiert",
+   "Successfully Deleted Lure Alarm(s)":"Lockmodul-Einstellung erfolgreich gelöscht",
+   "Successfully Updated Distance on ALL Lures":"Distanzeinstellungen für alle Lockmodule gespeichert",
+   "Successfully Created Profile":"Profil erfolgreich erstellt",
+   "Successfully Renamed Profile":"Profil erfolgreich umbenannt",
+   "Successfully Deleted Profile":"Profil erfolgreich gelöscht",
+   "Delete ALL Lures?":"Alle Lockmodule löschen?",
+   "NEW LURES ALARM":"NEUE LOCKMODUL-EINSTELLUNG",
+   "ALL LURES":"ALLE LOCKMODULE",
+   "Profile":"Profil",
+   "Default":"Standard",
+   "Delete Profile":"Profil löschen",
+   "You currently don't have any profile configured":"Du hast momentan kein Profil eingestellt",
+   "This will delete this Profile":"Dadurch wird dieses Profil gelöscht",
+   "AND ALL ASSOCIATED TRACKINGS":"UND ALLE DAMIT VERBUNDENEN EINSTELLUNGEN"
 }
